Google/yandex auth

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>PulseCheck — Privacy-First Meeting Recorder for Mac</title>
     <meta name="description" content="Record, transcribe, and summarize your 1-on-1 meetings with AI. Audio files never leave your Mac. Built for managers who value privacy." />
     <meta name="author" content="PulseCheck" />
+    <meta name="google-site-verification" content="EJGtmCC6cWYfr-eCmGxPX_h3jwTrN_me6mMXf3NG2SU" />
+    <meta name="yandex-verification" content="8fba4660429d6c58" />
 
     <meta property="og:title" content="PulseCheck — Privacy-First Meeting Recorder" />
     <meta property="og:description" content="Record, transcribe, and summarize your 1-on-1 meetings with AI. Audio never leaves your Mac." />
